--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header class="bb-header">
 
   <ion-navbar>
     <ion-title>登录</ion-title>
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="bb-content">
     <!-- <ion-item>
         <ion-label fixed>账号</ion-label>
         <ion-input type="text" placeholder="请输入账号" #username></ion-input>
@@ -44,7 +44,12 @@
         <ion-item>
           <ion-input [type]="isShow ? 'text':'password'" value="88888" placeholder="密码" #password></ion-input>
           <!-- <ion-icon ios="ios-key" md="md-key" item-end [ngStyle]="iconStyle"></ion-icon> -->
-          <ion-icon item-end [ios]="isShow ? 'ios-eye' : 'ios-eye-off'" [md]="isShow ? 'md-eye' : 'md-eye-off'" [ngStyle]="iconStyle" (click)="isShow=!isShow"></ion-icon>
+          <button ion-button outline item-end icon-end  (click)="isShow=!isShow" style="padding: 0;
+          margin: 0;
+          border-color: transparent;">
+              <ion-icon item-end [ios]="isShow ? 'ios-eye' : 'ios-eye-off'" [md]="isShow ? 'md-eye' : 'md-eye-off'" [ngStyle]="iconStyle"></ion-icon>
+
+            </button>
         </ion-item>
     
         <!-- <ion-item no-lines>
